DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
[2.0.0 released - 2.16.2005]===================================================
2004-12-02 patrickh     Improved support for the Intel C/C++ compiler.
                        NEW VERSION: 1.99.20
2004-12-02 patrickh     DPP_PROG_CC and DPP_PROG_CXX no longer call
                        DPP_SETUP_COMPILER automatically.
                        NEW VERSION: 1.99.19
2004-11-07 patrickh     Added initial support for Objective-C in the makefile
                        stubs.
                        NEW VERSION: 1.99.19
2004-11-05 patrickh     Updated, improved, and fixed DPP_CHECK_JNI.
                        NEW VERSION: 1.99.18
2004-11-03 patrickh     Changed DPP_HAVE_OPENGL to use AC_PATH_XTRA instead of
                        AC_PATH_X.  Use X_CFLAGS and X_LIBS instead of
                        X_INCLUDES and X_LDFLAGS.
                        NEW VERSION: 1.99.17
2004-10-21 patrickh     Fixed the macros in config/pkgs so that tests can now
                        be disallowed using the --without-<pkg> option variant.
                        NEW VERSION: 1.99.16
2004-03-01 patrickh     Renamed the variable $_EXTRA_FLAGS variable in abi.m4
                        to the more meaningful $ABI_FLAGS.
                        NEW VERSION: 1.99.15
2003-11-23 patrickh     Fully synchronized with RELENG_1_5.
                        NEW VERSION: 1.99.14
2003-11-23 patrickh     Added support for generating Python code from IDL.
2003-11-23 patrickh     Added a "warning level" feature for compiling with
                        different degrees of strictness.
2003-06-10 patrickh     Changed the command-line arguments --with-awroot,
                        --with-paroot, --with-synroot, and --with-glutroot to
                        --with-audioworks, --with-portaudio, --with-subsynth,
                        and --with-glut respectively.